--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,24 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Finance management</title>
+        <meta name="description" content="Finance management application running on local storage only.">
+        <meta name="apple-mobile-web-app-title" content="Finance management">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="theme-color" content="#009688">
+        <link rel="manifest" href="/manifest.json">
+        <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
         <style>
             html,
             body,
@@ -18,7 +36,10 @@
     </head>
     <body>
         <div id="app" class="app">
+            <noscript>
+                You need to enable JavaScript to run this application.
+            </noscript>
         </div>
-        <script src="/generated/bundle.js?v=__ASSET_VERSION__"></script>
+        <script src="/bundle.js?v=__ASSET_VERSION__"></script>
     </body>
 </html>
