--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
                 padding: 0;
                 margin: 0;
                 background-color: #fafafa;
+                overflow-x: hidden;
             }
         </style>
     </head>
